# stwo-brainfuck

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yaml  trunk-check.yaml
.trunk/: trunk.yaml
.trunk/configs/: .rustfmt.toml
brainfuck_programs/: a-bc.bf  collatz.bf  fib.bf  hello_kakarot.bf
crates/brainfuck-prover/: Cargo.toml
crates/brainfuck-vm/: Cargo.toml
crates/brainfuck-vm/src/: compiler.rs  instruction.rs  machine.rs  main.rs  registers.rs  test_helper.rs
crates/brainfuck_prover/: Cargo.toml
crates/brainfuck_prover/src/: lib.rs
crates/brainfuck_prover/src/brainfuck_air/: mod.rs
crates/brainfuck_prover/src/components/: mod.rs
crates/brainfuck_prover/src/components/instruction/: component.rs  table.rs
crates/brainfuck_prover/src/components/io/: component.rs  table.rs
crates/brainfuck_prover/src/components/memory/: component.rs  table.rs
crates/brainfuck_prover/src/components/processor/: component.rs  mod.rs  table.rs
crates/brainfuck_prover/src/components/processor/instructions/: input_component.rs  left_component.rs  minus_component.rs  mod.rs  output_component.rs  plus_component.rs  right_component.rs  table.rs
crates/brainfuck_prover/src/components/processor/instructions/end_of_execution/: component.rs  table.rs
crates/brainfuck_prover/src/components/processor/instructions/jump/: jump_if_not_zero_component.rs  jump_if_zero_component.rs  mod.rs  table.rs
crates/brainfuck_prover/src/components/program/: component.rs  table.rs
crates/brainfuck_prover/src/utils/: mod.rs
crates/brainfuck_vm/: Cargo.toml
crates/brainfuck_vm/src/: compiler.rs  instruction.rs  lib.rs  machine.rs  registers.rs  test_helper.rs
crates/brainfuck_vm/src/tables/: instruction.rs
crates/brainfuck_vm/tests/: integration.rs
scripts/: clippy.sh
