[workspace]
members = ["crates/brainfuck_vm", "crates/brainfuck_prover"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Simon Malatrait <simon@kakarot.org>"]
description = "Brainfuck ZK-VM with STWO"

[workspace.lints]
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[workspace.lints.clippy]
# all lints that are on by default (correctness, suspicious, style, complexity, perf)
all = { level = "warn", priority = -1 }
# new lints that are still under development
nursery = { level = "warn", priority = -1 }
# lints which are rather strict or have occasional false positives
pedantic = { level = "warn", priority = -1 }

# Needed for Tables
fallible_impl_from = "allow"

# avoid lints that are too pedantic
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
default_trait_access = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
brainfuck_vm = { path = "crates/brainfuck_vm" }
brainfuck_prover = { path = "crates/brainfuck_prover" }
clap = { version = "4.3.10", features = ["derive"] }
stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "31e8dbc", features = [
  "parallel",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
num-traits = "0.2.19"
thiserror = "2.0"

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
