[package]
name = "brainfuck_vm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
num-traits.workspace = true
stwo-prover.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror.workspace = true
